
* GITHUB#15523: Updating createMultiSegmentIndex to utilize an explicit NoMergePolicy (Bryce Kane)

* GITHUB#14616 : Fix mis-interpretation of `maxNumBytes` in FuzzySet#createSetBasedOnMaxMemory (Greg Miller)

* GITHUB#15554: Fix tessellator failure by preferring the shared vertex that is the leftmost vertex of the hole
  (Ignacio Vera)

Other
---------------------
* GITHUB#15237: Fix SmartChinese to only deserialize dictionary data from classpath with a native array
  filter applied and never cache dictionaries from custom locations. Also install a global deserialization
  filter factory that disallows any unprotected deserialization while running tests.
  Applications using SecurityManager now need to grant SerializablePermission("serialFilter")
  to the analysis-smartcn module. (Uwe Schindler, Isaac David)

* GITHUB#15431: Index open performs version check on each segment, ignores indexCreatedVersionMajor (Rahul Goswami, Mike Sokolov)

* GITHUB#15481: The `reverse` field of SortField is now final. If you have subclassed SortField,
  you should set `reverse` in the super constructor. (Alan Woodward)

* GITHUB#15476: Enforce fallback support for float vector retrieval in quantized KNN vector formats. (Pulkit Gupta)

* GITHUB#15513: Update documentation in DefaultBloomFilterFactory to reflect changes made in GITHUB#11900 (Greg Miller)

* GITHUB#15341: Align float vectors on disk to 64 bytes, for optimal performance on Arm Neoverse
  machines (including vectors inside CFS files). (Mike McCandless, Kaival Parikh)

* GITHUB#15619: Update documentation in Lucene104PostingsFormat. with 259 documents, the first 256 document ids should be  encoded as one packed block (Lyon-NEU)

Build
---------------------
* Upgrade forbiddenapis to version 3.10.  (Uwe Schindler)

======================= Lucene 10.3.2 =======================

Bug Fixes
---------------------
* GITHUB#15380: Fix potential EOF introduced by optimized filter iterations in MaxScoreBulkScorer. The